# kraft-der-mada

./: CMakeLists.txt  ProjectHome.md  TEMPLATE.txt
src/: CMakeLists.txt  mada.sln  main.cpp
src/foundation/: foundation.vcproj  stdmadainc.h
src/foundation/core/: Debug.h  Factory.cpp  Factory.h  Memory.h  Ptr.h  RefCounted.cpp  RefCounted.h  Rtti.cpp  RttiMacros.h  SingletonMacros.h  Types.h
src/foundation/core/linux/: LinuxSysUtils.cpp  LinuxSysUtils.h  Precompiled.h
src/foundation/core/win32/: Precompiled.h  Win32SysUtils.cpp  Win32SysUtils.h
src/foundation/db/: Database.cpp  Database.h  DatabaseServer.cpp  DbError.h  ResultSet.h
src/foundation/graphics/: GraphicsEntity.cpp  GraphicsEntity.h  GraphicsServer.cpp
src/foundation/messaging/: Message.cpp  Message.h  MessageDispatcher.cpp  MessageDispatcher.h  MessagePort.cpp  MessagePort.h
src/foundation/physics/: CollisionShape.cpp  CollisionShape.h  MotionState.cpp  MotionState.h  PhysicsEntity.h  PhysicsServer.h  PhysicsWorld.cpp
src/foundation/physics/btogre/: BtOgreExtras.h
src/foundation/properties/: PropertyDefinition.h  PropertyDefinitionBase.cpp  PropertyDefinitionBase.h  PropertyId.cpp  PropertyId.h  PropertyTable.cpp  ValueType.h
src/foundation/sound/: OggSoundFormat.h  Sound.cpp  Sound.h  SoundEntity.cpp  SoundEntity.h  SoundError.h  SoundFormat.h  SoundServer.cpp  SoundServer.h  WavSoundFormat.cpp
src/foundation/timing/linux/: LinuxTimer.cpp  LinuxTimer.h
src/foundation/timing/win32/: Win32Timer.cpp  Win32Timer.h
src/lightgame/: LightGame.cpp  LightGame.h  lightgame.vcproj  main.cpp
src/mada/: Game.cpp  Game.h  GameServer.cpp  GameServer.h  mada.vcproj
src/mada/game/: Component.cpp  Component.h  FeatureServer.cpp  FeatureServer.h  GameObject.cpp  GameObject.h  GameState.cpp  GameState.h  Manager.cpp  Manager.h
src/mada/game/base/: Component.cpp  Component.h  FeatureServer.cpp  GameObject.cpp  GameObject.h  Manager.cpp  Manager.h
src/mada/game/core/: CategoryManager.cpp  CategoryManager.h  CoreFeatureServer.cpp  CoreFeatureServer.h  CoreMessages.cpp  CoreProperties.cpp  CoreProperties.h  GameObject.cpp  GameObject.h  GameObjectManager.cpp  GameObjectManager.h  GameStateManager.h
src/mada/graphics/: GraphicsFeatureServer.cpp  GraphicsFeatureServer.h  GraphicsProperties.cpp  MeshGraphicsComponent.cpp  MeshGraphicsManager.h
src/mada/graphicsfeature/: GraphicsFeatureServer.h  GraphicsProperties.cpp  MeshGraphicsComponent.cpp  MeshGraphicsManager.cpp
src/mada/physics/: PhysicsProperties.h
src/mada/physicsfeature/: PhysicsComponent.cpp  PhysicsComponent.h  PhysicsFeatureServer.cpp  PhysicsFeatureServer.h  PhysicsProperties.cpp  PhysicsProperties.h
src/mada/soundfeature/: SoundFeatureServer.cpp  SoundFeatureServer.h  SoundProperties.cpp  SoundProperties.h
trunk/: CMakeLists.txt
trunk/cmake/: FindALUT.cmake
trunk/docs/: Doxyfile
trunk/mada/: mada.vcproj
trunk/mada/include/: Mada.h  MadaCeguiHelper.h  MadaDatabase.h  MadaGameLoop.h  MadaGameObjectManager.h  MadaGameState.h  MadaGuiManager.h  MadaGuiWindow.h  MadaLogging.h  MadaMainMenuGameState.h  MadaPrerequisites.h  MadaProperty.h  MadaSoundManager.h
trunk/mada/src/: Mada.cpp  MadaDatabase.cpp  MadaGameLoop.cpp  MadaGameState.cpp  MadaGuiManager.cpp  MadaInputManager.cpp  MadaLogging.cpp  MadaMainMenuGameState.cpp  MadaMainMenuWindow.cpp  MadaSoundManager.cpp
trunk/media/: rock.material  testlevel.material  testlevel.mesh  testlevel_chunk1.mesh  testlevel_chunk2.mesh
trunk/scripts/: add_default_config_params.rb  create_mada_db.rb  create_mada_db.sql  plugins_Release.cfg  prepare_game_dir.cmd  prepare_game_dir_debug.cmd  prepare_game_dir_release.cmd
trunk/src/: CMakeLists.txt  mada.vcproj  main.cpp
trunk/src/foundation/: foundation.vcproj  stdmadainc.h
trunk/src/foundation/core/: Config.h  Debug.h  Factory.cpp  Memory.h  Ptr.h  RefCounted.cpp  RefCounted.h  Rtti.cpp  Rtti.h  RttiMacros.h  SysUtils.h  Types.h
trunk/src/foundation/core/linux/: LinuxSysUtils.cpp  LinuxSysUtils.h  Precompiled.h
trunk/src/foundation/core/win32/: Precompiled.h  Win32SysUtils.cpp
trunk/src/foundation/db/: Column.h  Command.cpp  Command.h  Database.cpp  DatabaseServer.cpp  DatabaseServer.h  DbError.h  DbReader.cpp  DbReader.h  DbUtils.h  Table.h
trunk/src/foundation/graphics/: GraphicsEntity.cpp  GraphicsEntity.h  GraphicsServer.cpp  GraphicsServer.h
trunk/src/foundation/messaging/: Message.h  MessageDispatcher.h  MessageHandler.h  MessagePort.cpp  MessagePort.h
trunk/src/foundation/physics/: BoxShape.cpp  BoxShape.h  CollisionShape.h  CollisionShapeFactory.cpp  CollisionShapeFactory.h  PhysicsEntity.cpp  PhysicsServer.cpp  PhysicsServer.h  PhysicsWorld.cpp  PhysicsWorld.h
trunk/src/foundation/properties/: AccessMode.h  Property.cpp  Property.h  PropertyDefinition.h  PropertyDefinitionBase.cpp  PropertyDefinitionBase.h  PropertyId.cpp  PropertyId.h  PropertyTable.h
trunk/src/foundation/sound/: OggSoundFormat.cpp  OggSoundFormat.h  Sound.cpp  SoundFormat.cpp  SoundFormat.h  SoundServer.cpp  SoundServer.h  WavSoundFormat.cpp  WavSoundFormat.h
trunk/src/foundation/timing/: Timer.h
trunk/src/lightgame/: LightGame.cpp  lightgame.vcproj
trunk/src/mada/: Game.cpp  Game.h  GameServer.cpp  MasterTime.cpp  MasterTime.h  mada.vcproj
trunk/src/mada/game/: Component.cpp  FeatureServer.h  GameState.h  LevelLoader.h  Manager.h
trunk/src/mada/graphics/: GraphicsFeatureServer.cpp  GraphicsFeatureServer.h  MeshGraphicsComponent.cpp  MeshGraphicsComponent.h
trunk/src/mada/graphicsfeature/: GraphicsFeatureServer.cpp  GraphicsFeatureServer.h  GraphicsProperties.h  MeshGraphicsComponent.cpp  MeshGraphicsComponent.h  MeshGraphicsManager.cpp  MeshGraphicsManager.h
trunk/src/mada/physics/: PhysicsFeatureServer.h  PhysicsProperties.cpp
trunk/src/mada/physicsfeature/: PhysicsComponent.cpp  PhysicsComponent.h  PhysicsFeatureServer.cpp  PhysicsManager.cpp  PhysicsManager.h  PhysicsProperties.cpp
trunk/src/mada/soundfeature/: SoundComponent.cpp  SoundComponent.h  SoundFeatureServer.cpp  SoundFeatureServer.h  SoundProperties.cpp
(+61 files in other folders)
